# oracle-monorepo-near

./: .gitmodules  Cargo.toml  build.sh  test.sh
deployment/: README.md  deploy_oracle.sh  deploy_request_interface.sh  deploy_requestor.sh  deploy_target_contract.sh  redeploy_oracle.sh  reset_account.sh
oracle/: Cargo.toml
oracle/scripts/: build.sh  test.sh
oracle/src/: actions.rs  callback_args.rs  data_request.rs  data_request_creation.rs  fee_config.rs  fee_status.rs  flux_token.rs  fungible_token.rs  fungible_token_receiver.rs  gov.rs  helpers.rs  lib.rs  logger.rs  mock_requestor.rs  mock_token.rs  oracle_config.rs  policy_item.rs  proposal.rs  proposal_status.rs  requestor_handler.rs  resolution_window.rs  storage_manager.rs  target_contract.rs  target_contract_handler.rs  types.rs  upgrade.rs  vote_types.rs  whitelist.rs
oracle/tests/it/: dr_basic_tests.rs  dr_creation_tests.rs  dr_resolution_tests.rs  dr_scenario_tests.rs  init.rs  main.rs  tvs_tests.rs
oracle/tests/it/utils/: account_utils.rs  deposit.rs  lib.rs  oracle_utils.rs  request_interface_utils.rs  target_contract_utils.rs  token_utils.rs
oracle/tests/it/wasm/: oracle.wasm
request-interface/: Cargo.toml
request-interface/src/: fungible_token_handler.rs  lib.rs
requestor-contracts/: Cargo.toml
requestor-contracts/scripts/: build.sh
requestor-contracts/src/: lib.rs
scripts/: build.sh
src/: flux_token.rs  lib.rs  policy_item.rs  proposal.rs  vote_types.rs
target-contract/: Cargo.toml
target-contract/scripts/: build.sh
target-contract/src/: lib.rs
token/: Cargo.toml
(+4 files in other folders)
