[package]
name = "oracle"
version = "0.1.0"
authors = ["jasperdg <jasperdegooijer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev="249dacdcd3fd34bc00f0895a275f33f05cd910c1" }
uint = { version = "0.9.0", default-features = false }
serde = "1.0.118"

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", rev="249dacdcd3fd34bc00f0895a275f33f05cd910c1" }
token = { path = "./../token" }
request-interface = { path = "./../request-interface" }
target-contract = { path = "./../target-contract" }